Fixed Pokemon img being too small. Also moved centre img to the left

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,7 +45,9 @@ body
     width: 50%;
     height: auto;
     z-index: 1;
-    padding-left: 3%;
+    
+    /*padding-left: 3%;*/
+
 }
 
 #LeftImg
